# quantum-platforms

./: pyproject.toml
QUBO-testing-tomas/events/: Readme.md  pasqal-tutorial.ipynb  qperfect.json
QUBO-testing-tomas/middle-complex-qubo/: generate.py  pasqal-execution.ipynb  pennylane-execution.ipynb
QUBO-testing-tomas/tutorials/: generate-qubo-model.ipynb  off-diagonal.ipynb
QUBO-testing-tomas/tutorials/pasqal/: test.pulse.ipynb
QUBO-testing-tomas/tutorials/qperfect/: qperfect.json  qubo_with_mimiq_example.ipynb
events/: clasical.ipynb  pennylane-execution.ipynb  qperfect-execution.ipynb
middle-complex-qubo/: qperfect-execution.ipynb  qperfect.json
tutorials/pasqal/: basic.ipynb  pasqal-tutorial.ipynb  test.ipynb
tutorials/pennylane/: tutorial.ipynb
